After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785388 - Memory leak in dvdreadsrc.c
Memory leak in dvdreadsrc.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
1.12.2
Other All
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-25 08:09 UTC by Satya Prakash Gupta
Modified: 2017-07-25 08:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (849 bytes, patch)
2017-07-25 08:09 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-07-25 08:09:49 UTC
Created attachment 356339 [details] [review]
Patch file is attached.

Hello All,

There is memory leak in dvdreadsrc.c file

Path : gst-plugins-ugly/ext/dvdread/dvdreadsrc.c

Function: gst_dvd_read_src_goto_title
Memory leak is detected at line : 562.

t = g_strdup_printf ("subpicture-%d-stream", i);
without using g_free(t) there is another g_strdup_printf. which leads to memory leak.


++patch is attched for possible solution.

Kindly review the patch and provide your feedback.
Comment 1 Sebastian Dröge (slomo) 2017-07-25 08:24:00 UTC
commit 861cff5da13614f50636681d9039a731e279b695 (HEAD -> master)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Tue Jul 25 13:36:17 2017 +0530

    dvdreadsrc: Fix string memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=785388