dvdreadsrc: Fix string memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=785388